# sparrow

./: .gitignore  Cargo.toml  readme.md  rustc-ice-2024-10-17T23_20_28-1615468.txt  rustc-ice-2024-10-17T23_20_35-1615811.txt  rustc-ice-2024-10-17T23_20_45-1616187.txt  rustc-ice-2024-10-17T23_21_14-1617095.txt
addon/: __init__.py  blender_manifest.toml  export.py  menu.py  operators.py  panels.py  properties.py  requirements.txt  ui_lists.py  utils.py
addons/sparrow/: __init__.py  blender_manifest.toml  blueprints.py  export.py  operators.py  panels.py  properties.py  regsitry.py  requirements.txt  ui_lists.py  utils.py
addons/sparrow/operators/: edit_collection_instance.py  export_scenes.py  load_registry.py  select_asset_folder.py
addons/sparrow/ui/: collection_panel.py  object_panel.py  output_panel.py  scene_panel.py
art/: basic.blend  basic.blend1  registry.json  sparrow_basic.blend  sparrow_basic.blend1
assets/scenes/: Basic.gltf  Lib.glb  Scene.glb  basic.gltf
docs/: icons.md  notes.md
examples/: basic.rs
examples/helpers/: camera_controller.rs  loading.rs  mod.rs
scripts/: collection_instance_object.py  kitbash3d_import.py  profile.py  scene_objects.py
src/: animations.rs  extra_settings.rs  extras.rs  fake_entity.rs  lib.rs  process_gltfs.rs  reflect_component.rs  registry.rs  ronstring_to_reflect_component.rs
tmp/: test.json
