[package]
name = "sparrow"
version = "0.1.0"
edition = "2021"

[features]
default = []
#flatten_scene = []
animation = []
registry = []
reload = []

[dependencies]
bevy = { version = "0.15.0" }

#bevy_egui = { version = "0.28", default-features = false }
#bevy-inspector-egui = { version = "0.27", features = ["bevy_pbr", "highlight_changes"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"

# to be made optional

[dev-dependencies]
#bevy_asset_loader = { version = "0.21", features = [ "3d", "progress_tracking"] }
#iyes_progress = { version = "0.12", features = ["assets", "bevy_log", "debug"] }
